[gd_scene load_steps=20 format=3 uid="uid://u0jhoe6k7wto"]

[ext_resource type="Script" path="res://prefabs/Dialogue/DialogueBox/TradeBox.gd" id="1_0nhe7"]
[ext_resource type="Texture2D" uid="uid://bdlm2k5inqmwb" path="res://assets/UI/compass.png" id="2_xkf1y"]
[ext_resource type="Theme" uid="uid://bnb6osg7rfj47" path="res://theme/smallround.tres" id="3_esroe"]
[ext_resource type="Theme" uid="uid://dksvrshxgc4ql" path="res://theme/Signpost.tres" id="4_0ewts"]
[ext_resource type="Theme" uid="uid://c044efnplgfdt" path="res://theme/Scroll.tres" id="5_gwmoo"]
[ext_resource type="SpriteFrames" uid="uid://cjoid6ojefedy" path="res://theme/Arrows.tres" id="6_nv3ul"]
[ext_resource type="PackedScene" uid="uid://dnfv6q8hkcav3" path="res://prefabs/UI/Popup/AmountPopup.tscn" id="7_5lfei"]
[ext_resource type="Texture2D" uid="uid://d37gys83y0mgo" path="res://assets/UI/arrows.png" id="8_c3yda"]
[ext_resource type="PackedScene" uid="uid://cl8b7gtcakyrn" path="res://prefabs/UI/Popup/ClosePopup.tscn" id="9_acty5"]

[sub_resource type="Animation" id="Animation_q44kr"]
resource_name = "textbox_fade"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xuf1v"]
_data = {
"textbox_fade": SubResource("Animation_q44kr")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lsq8x"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(0, 9, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_24f8l"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(9, 9, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4xj7"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(18, 9, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixqj2"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(27, 9, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_drs16"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdd3k"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyu87"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6qbc"]
resource_local_to_scene = true
atlas = ExtResource("8_c3yda")
region = Rect2(27, 0, 9, 9)

[node name="DungeonBox" type="CanvasLayer"]
script = ExtResource("1_0nhe7")
metadata/Navi_Enabled = true
metadata/YesNo_Enabled = true

[node name="DialogueWrapper" type="MarginContainer" parent="."]
offset_top = 364.0
offset_right = 960.0
offset_bottom = 540.0
size_flags_vertical = 8
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="YesNo" type="MarginContainer" parent="DialogueWrapper"]
visible = false
layout_mode = 2
size_flags_horizontal = 8

[node name="Sprite2D" type="Sprite2D" parent="DialogueWrapper/YesNo"]
position = Vector2(-57, -14)
texture = ExtResource("2_xkf1y")

[node name="DialogueSelect" type="Control" parent="DialogueWrapper/YesNo"]
layout_mode = 2

[node name="DialogueYes" type="Button" parent="DialogueWrapper/YesNo/DialogueSelect"]
layout_mode = 0
offset_left = -73.0
offset_top = -67.0
offset_right = -41.0
offset_bottom = -42.0
size_flags_horizontal = 7
theme = ExtResource("3_esroe")
theme_type_variation = &"Button_Alt"
text = "Yes"

[node name="DialogueNo" type="Button" parent="DialogueWrapper/YesNo/DialogueSelect"]
layout_mode = 0
offset_left = -114.0
offset_top = -27.0
offset_right = -87.0
offset_bottom = -2.0
size_flags_horizontal = 7
theme = ExtResource("3_esroe")
theme_type_variation = &"Button_Alt"
text = "No"

[node name="DialogueText" type="RichTextLabel" parent="DialogueWrapper"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme = ExtResource("4_0ewts")
bbcode_enabled = true
text = "Lorem [b]ipsum[/b] dolor sit amet, consectetur adipiscing elit. Nullam vestibulum, lacus et auctor facilisis, nibh lorem fermentum lorem, a cursus diam magna in nisi. Donec luctus ullamcorper congue. "
fit_content = true

[node name="NameContainer" type="MarginContainer" parent="DialogueWrapper"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = -20
theme_override_constants/margin_top = -44

[node name="Name" type="Label" parent="DialogueWrapper/NameContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_gwmoo")
text = "Name Here"

[node name="ClickToContinue" type="AnimatedSprite2D" parent="DialogueWrapper"]
position = Vector2(821, 100)
scale = Vector2(2, 2)
sprite_frames = ExtResource("6_nv3ul")
animation = &"Flash_R"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xuf1v")
}

[node name="AmountPopup" parent="." instance=ExtResource("7_5lfei")]
item_desc = "How many [b][item][/b] do you want to trade?
(Available: [max])"
popup_type = 3

[node name="PopupText" parent="AmountPopup/SplitContainer/PopupBox/SplitContainer/TextPadding" index="0"]
text = "How many [b][item][/b] do you want to trade?
(Available: [max])"

[node name="Left" parent="AmountPopup/SplitContainer/PopupBox/SplitContainer/AmountSelect/SplitContainer/MiddleRow/NumberDisplay" index="0"]
texture_normal = SubResource("AtlasTexture_lsq8x")
texture_pressed = SubResource("AtlasTexture_24f8l")
texture_disabled = SubResource("AtlasTexture_d4xj7")
texture_focused = SubResource("AtlasTexture_ixqj2")

[node name="Right" parent="AmountPopup/SplitContainer/PopupBox/SplitContainer/AmountSelect/SplitContainer/MiddleRow/NumberDisplay" index="1"]
texture_normal = SubResource("AtlasTexture_drs16")
texture_pressed = SubResource("AtlasTexture_wdd3k")
texture_disabled = SubResource("AtlasTexture_eyu87")
texture_focused = SubResource("AtlasTexture_g6qbc")

[node name="ButtonLeft" parent="AmountPopup/SplitContainer/PopupBox/FooterMargin" index="0"]
text = "cancel"

[node name="ButtonRight" parent="AmountPopup/SplitContainer/PopupBox/FooterMargin" index="1"]
text = "trade"

[node name="ClosePopup" parent="." instance=ExtResource("9_acty5")]
visible = false

[node name="Sounds" type="Node" parent="."]

[node name="CustomSound" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="button_up" from="DialogueWrapper/YesNo/DialogueSelect/DialogueYes" to="." method="_on_YesButton_button_up"]
[connection signal="button_up" from="DialogueWrapper/YesNo/DialogueSelect/DialogueNo" to="." method="_on_dialogue_finished"]
[connection signal="focus_entered" from="AmountPopup/SplitContainer/PopupBox/SplitContainer/AmountSelect/SplitContainer/MiddleRow/NumberDisplay" to="AmountPopup/SplitContainer/PopupBox/SplitContainer/AmountSelect" method="_on_amount_focus_entered"]

[editable path="AmountPopup"]
[editable path="AmountPopup/SplitContainer/PopupBox/SplitContainer/AmountSelect"]
